<!--
  ~ Copyright (c) 2020.  by kd1412
  -->

<resources>
    <string name="app_name">TimtroSV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_name">Hồ Nguyễn Xuân Tây</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="text_debug">Debug</string>
    <string name="user_role">Người cho thuê</string>
    <string name="news_fragment">Đây là trang News thui</string>
    <string name="search_fragment">Đây là trang Search thui</string>
    <string name="search_hint">Tìm theo quận, thành phố,..</string>
    <string name="home_label">Phòng trọ mới nhất</string>
    <string name="profile_fragment">Đây là trang Profile thui</string>
    <string name="price">Giá: %,dđ</string>
    <string name="acreage">%d m2</string>
    <string name="acreage_detail">Diện tích: %dm2</string>
    <string name="room_detail">Chi tiết phòng trọ</string>
    <string name="splash_loading">Đang tải dữ liệu...</string>
    <string name="submit">Submit</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="next">Tiếp tục</string>
    <string name="back">Trở lại</string>
    <string name="upload">Đăng</string>
    <string name="upload_post">Đăng bài viết</string>
    <string name="city">Tỉnh / Thành Phố</string>
    <string name="district">Quận / Huyện / Thị xã</string>
    <string name="sub_district">Phường / Xã / Thị trấn</string>
    <string name="address">Địa chỉ</string>
    <string name="type_news">Loại tin</string>
    <string name="type_room">Loại phòng</string>
    <string name="price_room">Giá phòng (VND)</string>
    <string name="acreage_room">Diện tích (m2)</string>
    <string name="utilities_room">Tiện ích</string>
    <string name="text_user_already_exists">User already exists</string>
    <string name="text_update">Cập nhật</string>
    <string name="text_room_uploaded">Phòng đã đăng</string>
    <string name="text_search_result">Kết quả tìm được(3)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title">Tiêu đề bài đăng</string>
    <string name="text_contact">"Liên hệ với "</string>
    <string name="text_phonenumber">Số điện thoại liên lạc</string>
    <string name="text_description">Mô tả chi tiết</string>
    <string name="text_address">Nhập số nhà, tên đường</string>
    <string name="bottom_text_sheet_option_heading">Liên lạc</string>
    <string name="text_bottom_sheet_option_call">Gọi điện</string>
    <string name="text_bottom_sheet_option_message">Nhắn tin</string>
    <string name="text_user_uploaded">User uploaded</string>
    <string name="text_about">About me</string>
</resources>