<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020.  by kd1412
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            app:icon="@drawable/ic_baseline_arrow_forward_24"
            app:iconGravity="end"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back"
            app:icon="@drawable/ic_baseline_arrow_back_24"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".views.UploadFragmentStep2">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/upload_post"
                            android:textAppearance="?attr/textAppearanceHeadline6" />
                    </androidx.appcompat.widget.Toolbar>
                </com.google.android.material.appbar.AppBarLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type_news"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <RadioGroup
                        android:id="@+id/gr_news_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rdb_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cho thuê" />

                        <RadioButton
                            android:id="@+id/rdb_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tìm người ở ghép" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type_room"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />

                    <RadioGroup
                        android:id="@+id/gr_room_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rdb_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Phòng" />

                        <RadioButton
                            android:id="@+id/rdb_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Căn hộ" />

                        <RadioButton
                            android:id="@+id/rdb_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Phòng KTX" />

                        <RadioButton
                            android:id="@+id/rdb_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nhà nguyên căn" />
                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:hint="@string/price_room">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_room_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:hint="@string/acreage_room">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_room_acreage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/utilities_room"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/refrigerator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Tủ lạnh" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/wifi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Wifi " />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/washing_machine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Máy Giặt" />


                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/air_conditional"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Điều hòa" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/parking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Giữ xe" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/kitchen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Bếp" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/wc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="WC riêng" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/free_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Tự do" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:paddingBottom="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_description"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start|top" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>